# ifdcm

./: CMakeLists.txt  LICENSE  README.md
include/: ifdcm.h  susie.h
src/: ifdcm.cpp
